# tabstack-python

./: .stats.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  api.md  example.py  pyproject.toml  setup.cfg  setup.py  test_sdk.py
.github/workflows/: ci.yml  lint.yml  publish-pypi.yml  publish.yml  release-doctor.yml  test.yml
examples/: basic_usage.py
scripts/: lint
scripts/utils/: upload-artifact.sh
src/tabstack/: _base_client.py  _client.py  _models.py  _response.py  _streaming.py  _types.py  _version.py
src/tabstack/resources/: __init__.py  agent.py  automate.py  extract.py  generate.py
src/tabstack/types/: __init__.py  agent_automate_input_params.py  agent_automate_input_response.py  agent_automate_params.py  agent_automate_response.py  agent_research_params.py  automate_event.py  automate_execute_params.py  automate_execute_response.py  extract_create_json_params.py  extract_create_json_response.py  extract_create_markdown_params.py  extract_create_markdown_response.py  extract_json_params.py  extract_markdown_params.py  extract_markdown_response.py  generate_create_json_params.py  generate_create_json_response.py  generate_json_params.py  research_event.py  v1_global_buffer.py  v1_research_question_assessment.py
src/tabstack/types/shared/: __init__.py  geotarget_geo_target.py
src/tabstack/types/shared_params/: geotarget_geo_target.py
tabstack/: __init__.py  _http_client.py  _http_client_sync.py  _shared.py  agent.py  agent_sync.py  automate.py  client.py  client_sync.py  exceptions.py  extract.py  extract_sync.py  generate.py  generate_sync.py  types.py
tabstack_ai/: __init__.py  _http_client.py  automate.py  client.py  exceptions.py  extract.py  generate.py  schema.py  types.py
tests/: __init__.py  conftest.py  test_automate.py  test_client.py  test_client_sync.py  test_exceptions.py  test_extract.py  test_extract_files.py  test_extract_sync.py  test_files.py  test_generate.py  test_http_client.py  test_integration.py  test_models.py  test_shared.py
tests/api_resources/: test_agent.py  test_automate.py  test_extract.py  test_generate.py
tests/test_utils/: test_path.py
