[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tabstack-ai"
version = "1.0.0"
description = "Python SDK for TABStack AI - Extract, Generate, and Automate web content"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "TABStack", email = "support@tabstack.ai"}
]
keywords = ["web-scraping", "ai", "automation", "data-extraction", "web-automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://tabstack.ai"
Documentation = "https://docs.tabstack.ai"
Repository = "https://github.com/tabstack/tabs-python"
"Bug Tracker" = "https://github.com/tabstack/tabs-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tabstack_ai*"]

[tool.setuptools.package-data]
tabstack_ai = ["py.typed"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"
fix = true

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), and isort (I) rules
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes (includes F401 - unused imports)
    "I",   # isort
    "W",   # pycodestyle warnings
]

# F401: Unused imports - enforced and auto-fixable
unfixable = []

[tool.ruff.lint.per-file-ignores]
# test_sdk.py intentionally imports things to test that they're importable
"test_sdk.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["tabstack_ai"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
